argocd-declarative/manifests/nifi-app/adminer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: nifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: docker.io/library/adminer:4.8.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
