argocd-declarative/manifests/nifi-app/nifi-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi
  namespace: nifi
  # annotations:
    # reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:
      containers:
        - name: nifi
          image: docker.io/apache/nifi:2.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: nifi-storage
              mountPath: /opt/nifi/nifi-current/conf
              subPath: conf
            - name: nifi-storage
              mountPath: /opt/nifi/nifi-current/logs
              subPath: logs
            - name: nifi-storage
              mountPath: /opt/nifi/nifi-current/flowfile_repository
              subPath: flowfile_repository
            - name: nifi-storage
              mountPath: /opt/nifi/nifi-current/state
              subPath: state
            - name: nifi-storage
              mountPath: /opt/nifi/nifi-current/database_repository
              subPath: database_repository
            - name: nifi-storage
              mountPath: /opt/nifi/nifi-current/provenance_repository
              subPath: provenance_repository
            - name: nifi-storage
              mountPath: /opt/nifi/nifi-current/content_repository
              subPath: content_repository
            - name: nifi-storage
              mountPath: /opt/nifi/nifi-current/python_extensions
              subPath: python_extensions
            - name: nifi-storage
              mountPath: /opt/nifi/nifi-current/nar_extensions
              subPath: nar_extensions
      volumes:
        - name: nifi-storage
          persistentVolumeClaim:
            claimName: nifi-pvc
