argocd-declarative/manifests/nifi-app/adminer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nifi-adminer-svc
  namespace: nifi
spec:
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 8446
      targetPort: 8080
#      nodePort: 30846
#  type: NodePort
  type: ClusterIP
