argocd-declarative/manifests/nifi-app/nifi-registry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nifi-registry-svc
  namespace: nifi
spec:
  selector:
    app: nifi-registry
  ports:
    - protocol: TCP
      port: 18080
      targetPort: 18080
  type: ClusterIP
