argocd-declarative/manifests/nifi-app/nifi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nifi-svc
  namespace: nifi
spec:
  selector:
    app: nifi
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
