argocd-declarative/manifests/nifi-app/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nifi-postgres-svc
  namespace: nifi
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
#      nodePort: 30846
#  type: NodePort
  type: ClusterIP
