argocd-declarative/manifests/nifi-app/nifi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifi-ingress
  namespace: nifi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # To support HTTPS

#    nginx.ingress.kubernetes.io/service-upstream: "true"  # Ensure NGINX looks for the service in another namespace
#    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Ensures that HTTP requests are redirected to HTTPS

#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: adminer.int.taqniat.ae
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nifi-adminer-svc
                port:
                  number: 8446
